@@ -33,7 +33,14 @@ struct file_system_type pvfs2_fs_type =
     .name = "pvfs2",
     .get_sb = pvfs2_get_sb,
     .kill_sb = pvfs2_kill_sb,
-    .owner = THIS_MODULE
+    .owner = THIS_MODULE,
+/*
+  NOTE: the FS_REQUIRES_DEV flag is used to honor NFS exporting,
+  though we're not really requiring a device.  pvfs2_get_sb is still
+  get_sb_nodev and we're using kill_litter_super instead of
+  kill_block_super.
+*/
+    .fs_flags = FS_REQUIRES_DEV
 };
 
 /* the assigned character device major number */
